--- a/Randomizer/client/src/styles/main.css
+++ b/Randomizer/client/src/styles/main.css
@@ -44,7 +44,20 @@ body {
     background-color: #343a40 !important;
     color: white !important;
 }
+ .myModal .modal-content {
+    background-color: #212427 !important;
+    color: white !important;
+ }
 
-.form-group {
-    
-}
+ #login-form {
+    background-color: #212427 !important;
+    color: white !important;
+ }
+ 
+ .landing-card {
+    background-color: #212427 !important;
+    color: white !important;
+
+ }
+
+ 
